# california-housing

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  infer.py  pyproject.toml  train.py
.dvc/: config
california_housing/: infer.py  train.py
california_housing/models/: model.py  preprocessing.py
california_housing/utils/: sio.py
configs/: default.yaml
data/: .gitignore  test_data.csv.dvc  train_data.csv.dvc
models/: .gitignore  saved_states.dvc
models/classes/: preprocessing.py
utils/: dvc.py  git.py
