[tool.poetry]
name = "mlops-hw"
version = "0.1.0"
description = "hse mlops project"
authors = ["iskanderf <iskanderf.git@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
skops = "^0.9.0"

[tool.poetry.group.dev.dependencies]
fire = "^0.5.0"
dvc = "^3.36.1"
pre-commit = "^3.6.0"
mlflow = "^2.9.2"
hydra-core = "^1.3.2"
dvc-gdrive = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
